src/main/default/objects/Community_Contact_Form__c/Community_Contact_Form__c.object-meta.xml
<CustomObject>
    <label>Community Contact Form</label>
    <nameField>
        <displayFormat>CCF-{0}</displayFormat>
        <label>Community Contact Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Contact Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>