src/main/default/objects/Community_Contact_Form__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Contact email</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>