src/main/default/objects/Community_Contact_Form__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Contact&apos;s message</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>