src/main/default/objects/Community_Contact_Form__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Contact name</description>
    <label>Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>